--- a/index.html
+++ b/index.html
@@ -57,5 +57,8 @@
   </div>
   <script src="index.js"></script>
 </body>
-
+    <p><a href="https://github.com/Deblapin/My-Weather-app" target="_blank"
+      class="opensourcelink" id="opensource">Open-source code
+    </a> by Debora Lapin
+    </p>
 </html>
