--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
         </div>
       </div>
     </div>
+<small>
+  <a href="https://github.com/Deblapin/My-Weather-app" target="_blank">Open-source code</a> by Debora Lapin
+</small>
   </div>
+
+
   <script src="index.js"></script>
 </body>
-    <p><a href="https://github.com/Deblapin/My-Weather-app" target="_blank"
-      class="opensourcelink" id="opensource">Open-source code
-    </a> by Debora Lapin
-    </p>
 </html>
